# agentbounty

./: .gitignore  AGGRESSIVE_CAMPAIGN_STATUS.md  API_POSTING_STATUS.md  ARCHITECTURE.md  AUTONOMOUS_DECISIONS.md  AUTONOMOUS_PROGRESS_19H30.md  Anchor.toml  DEMO_SCRIPT.md  DEPLOYMENT.md  DEPLOYMENT_NEXT_STEPS.md  DEPLOYMENT_SUCCESS.md  DEPLOY_INSTRUCTIONS.md  DEPLOY_NOW.sh  DEPLOY_WEB_UI.md  DEVNET_DEPLOYMENT.md  FIX_COMPLETE.md  FORUM_BLITZ_REPORT.md  FORUM_POST_DAY2.txt  FORUM_POST_MAJOR_UPDATE.md  FORUM_UPDATE_DAY2.md  GITHUB_PUSH.md  INTEGRATIONS.md  INTEGRATION_MESSAGES_READY.txt  INTEGRATION_TARGETS.md  OUTREACH_MESSAGES.md  PRIORITY_DEPLOY.md  PROOF_OF_CONCEPT.md  PYXIS_INTEGRATION.md  QUICK_ACTIONS.md  QUICK_DEPLOY.md  README.md  README_NOW.md  READY_TO_SHIP.md  ROADMAP.md  STATUS.md  STATUS_REPORT.md  TRANSACTION_PROOF.md  VOTE_CAMPAIGN.md  check-bounties-simple.js  check-bounties.js  (+32 more)
api/: README.md  idl.json  package-lock.json  package.json  server.js
app/: app.js  index.html
drafts/: day-2-forum-post.md
integrations/: blockscore-integration.md  jarvis-sdk-integration.md  pyxis-demo.md  znap-integration.md
integrations/znap/: README.md  package.json
integrations/znap/src/: bounty-feed-integration.ts  demo.ts  znap-client.ts
programs/agentbounty/: Cargo.toml  Xcode.rs
programs/agentbounty/src/: lib.rs
sdk/: README.md  package.json
sdk/src/: index.ts
