[package]
name = "agentbounty"
version = "0.1.0"
description = "Real-time task marketplace for AI agents"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agentbounty"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
